src/test/ui/parser/raw/raw-literal-underscore.stderr
error: `r#_` is not currently supported.
  --> $DIR/raw-literal-underscore.rs:3:20
   |
LL | fn underscore_test(r#_: u32) {
   |                    ^^^

error: aborting due to previous error

